--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "sha3": "^2.1.4",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
